<resources>
    <string name="app_name">androidStudy</string>
    <string name="title_wechat">微信</string>
    <string name="title_mailList">通讯录</string>
    <string name="title_found">发现</string>
    <string name="title_me">我</string>

    <string name="title_group_chat">发起群聊</string>
    <string name="title_add_friend">添加朋友</string>
    <string name="title_barcode">扫一扫</string>
    <string name="title_pay">收付款</string>
    <string name="title_help">帮助与反馈</string>
</resources>